[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/tasks/spider/Hand.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/tasks/crab/CrabHand.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 hit_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float hit_strength : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 custom_color = texture(TEXTURE, UV);
	custom_color.rgb = mix(custom_color.rgb, hit_color.rgb, hit_strength);
	COLOR = custom_color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/hit_color = Color( 0.705882, 0.12549, 0.164706, 1 )
shader_param/hit_strength = 0.0

[node name="CrabHand" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
material = SubResource( 2 )

[node name="GrabTimer" type="Timer" parent="." index="5"]
one_shot = true

[node name="Listener2D" type="Listener2D" parent="." index="6"]
current = true

[connection signal="area_entered" from="." to="." method="_on_CrabHand_area_entered"]
[connection signal="timeout" from="GrabTimer" to="." method="_on_GrabTimer_timeout"]
